--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -7,9 +7,19 @@
             <ng-template [ngTemplateOutlet]="teilmarktButton"></ng-template>
         </div>
         <div [class]="isCollapsed ? 'd-lg-none' : 'd-xxl-none'">
-            <ng-template [ngTemplateOutlet]="teilmarktStichtagMobile"></ng-template>
+            <ng-template [ngTemplateOutlet]="teilmarktStichtagDropdownButton"></ng-template>
         </div>
-        <ng-template [ngTemplateOutlet]="geosearch"></ng-template>
+
+        <!-- For desktop view -->
+        <div class="nav px-auto w-100 max-search-width d-none d-sm-inline-block"
+             style="position: relative;">
+            <power-geosearch (selectResult)="onAddressChange($event)"
+                             [adresse]="adresse">
+            </power-geosearch>
+        </div>
+
+        <!-- For mobile view -->
+        <ng-template [ngTemplateOutlet]="geosearchMobileButton"></ng-template>
 
         <!-- Further function button -->
         <div class="btn-group"
@@ -158,7 +168,10 @@
 <!-- For mobile view -->
 <div [ngClass]="{'d-none' : !searchActive}"
      class="d-sm-none">
-    <ng-template [ngTemplateOutlet]="geosearchBar"></ng-template>
+    <power-geosearch #geosearchComponent
+                     (selectResult)="onAddressChange($event)"
+                     [adresse]="adresse">
+    </power-geosearch>
 </div>
 
 <div [ngClass]="{'d-none' : !filterActive}"
@@ -245,7 +258,7 @@
 </ng-template>
 
 <!-- Mobile - Teilmarkt and Stichtag dropdown button -->
-<ng-template #teilmarktStichtagMobile>
+<ng-template #teilmarktStichtagDropdownButton>
     <button class="nav-link btn"
             [ngClass]="{'active': filterActive}"
             type="button"
@@ -269,16 +282,12 @@
 </ng-template>
 
 <!-- Geosearch bar view -->
-<ng-template #geosearch>
-    <div class="nav px-auto w-100 max-search-width d-none d-sm-inline-block"
-         style="position: relative;">
-        <ng-template [ngTemplateOutlet]="geosearchBar"></ng-template>
-    </div>
+<ng-template #geosearchMobileButton>
     <div class="nav ml-auto d-sm-none">
         <button class="nav-link btn"
                 [ngClass]="{'active': searchActive}"
                 type="button"
-                (click)="searchActive = !searchActive"
+                (click)="searchActive = !searchActive; geosearchComponent.setFocus()"
                 alt="Suche"
                 title="Suche"
                 i18n-alt
@@ -298,13 +307,6 @@
             </svg>
         </button>
     </div>
-</ng-template>
-
-<ng-template #geosearchBar>
-    <power-geosearch #geosearchComponent
-                     (selectResult)="onAddressChange($event)"
-                     [adresse]="adresse">
-    </power-geosearch>
 </ng-template>
 
 <power-flurstueck-search #flurstueckssearch
