--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -96,6 +96,10 @@ td {
     .sv_q_rating_min_text {
         display: none !important;
     }
+
+    .sv_main .sv_row:nth-child(2n) {
+        background-color: rgba(0, 0, 0, 0.03) !important;
+    }
 }
 
 .sv_custom_header {
