fixed linter errors

--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -1,6 +1,5 @@
 <div class="bg-white shadow-sm border-top">
-    <nav class="navbar d-flex flex-nowrap text-nowrap justify-content-between p-0"
-         role="navigation">
+    <nav class="navbar d-flex flex-nowrap text-nowrap justify-content-between p-0">
         <div class="d-none"
              [class]="isCollapsed ? 'd-lg-inline-block' : 'd-xxl-inline-block'">
             <ng-template [ngTemplateOutlet]="stichtagButton"></ng-template>
