add currentZoom to boris-component

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -30,7 +30,9 @@
                                                [collapsed]="collapsed"
                                                [expanded]="expanded"
                                                [threeDActive]="threeDActive"
-                                               [(resetMapFired)]="resetMapFired">
+                                               [(resetMapFired)]="resetMapFired"
+                                               [(currentZoom)]="currentZoom"
+                                               (currentZoomChange)="changeURL()">
                     </power-bodenrichtwertkarte>
                 </div>
             </div>
