--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -4,6 +4,7 @@
              (moveEnd)="onMoveEnd()"
              (load)="loadMap($event)"
              (rotate)="onRotate()"
+             (zoomEnd)="onZoomEnd()"
              [bounds]="bounds"
              [maxZoom]="18"
              [minZoom]="5"
