--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -31,8 +31,7 @@
                                                [expanded]="expanded"
                                                [threeDActive]="threeDActive"
                                                [(resetMapFired)]="resetMapFired"
-                                               [(currentZoom)]="currentZoom"
-                                               (currentZoomChange)="changeURL()">
+                                               [(currentZoom)]="currentZoom">
                     </power-bodenrichtwertkarte>
                 </div>
             </div>
