--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -52,8 +52,7 @@
                             aria-controls="collapseDetails">
                         <i class="bi d-block w-100"
                            role="img"
-                           i18n-aria-label
-                           aria-label="Detailansicht ein- bzw. ausklappen"
+                           aria-hidden="true"
                            [class.bi-chevron-left]="isCollapsed"
                            [class.bi-chevron-right]="!isCollapsed"></i>
                     </button>
