fixed linter; switchen aria-label to title for some elements

--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -292,8 +292,8 @@
                             <span *ngIf="taskSort && taskSort === 'pin'">
                                 <span *ngIf="!taskSortDesc"
                                       id="ascPin"
-                                      aria-label="Aufsteigend sortiert"
-                                      i18n-aria-label>
+                                      title="Aufsteigend sortiert"
+                                      i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
@@ -310,8 +310,8 @@
                                 </span>
                                 <span *ngIf="taskSortDesc"
                                       id="descPin"
-                                      aria-label="Absteigend sortiert"
-                                      i18n-aria-label>
+                                      title="Absteigend sortiert"
+                                      i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
@@ -341,8 +341,8 @@
                             <span *ngIf="taskSort && taskSort === 'description'">
                                 <span *ngIf="!taskSortDesc"
                                       id="ascDescription"
-                                      aria-label="Aufsteigend sortiert"
-                                      i18n-aria-label>
+                                      title="Aufsteigend sortiert"
+                                      i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
@@ -359,8 +359,8 @@
                                 </span>
                                 <span *ngIf="taskSortDesc"
                                       id="descDescription"
-                                      aria-label="Absteigend sortiert"
-                                      i18n-aria-label>
+                                      title="Absteigend sortiert"
+                                      i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
@@ -390,8 +390,8 @@
                             <span *ngIf="taskSort && taskSort === 'status'">
                                 <span *ngIf="!taskSortDesc"
                                       id="ascStatus"
-                                      aria-label="Aufsteigend sortiert"
-                                      i18n-aria-label>
+                                      title="Aufsteigend sortiert"
+                                      i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
@@ -408,8 +408,8 @@
                                 </span>
                                 <span *ngIf="taskSortDesc"
                                       id="descStatus"
-                                      aria-label="Absteigend sortiert"
-                                      i18n-aria-label>
+                                      title="Absteigend sortiert"
+                                      i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
