--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -66,8 +66,8 @@
             <hr class="my-4">
 
             <p class="text-center"
-               i18n-aria-label
-               aria-label="Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an nachfolgenden E-Mail Adresse."
+               i18n-title
+               title="Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an nachfolgenden E-Mail Adresse."
                i18n>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
             <div class="text-center">
                 <code class="mr-2">{{ mail }}</code>
