added Link for bodenrichtwerte vor 2012

--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -209,6 +209,14 @@
                     (click)="onStichtagChange(stag)">
                 {{stag | date}}
             </button>
+            <a class="dropdown-item nav-link"
+               role="button"
+               href="https://www.boris.niedersachsen.de/boris/bodenrichtwerte"
+               target="_blank"
+               rel="noopener noreferrer nofollow"
+               alt="Bodenrichtwerte vor 2012"
+               title="Bodenrichtwerte vor 2012"
+               i18n-title>&lt; 2012</a>
         </div>
     </div>
 </ng-template>
