--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -111,7 +111,7 @@
                         <a class="dropdown-item"
                            *ngIf="config.modules.includes('landesgrundstuecksmarktdaten')"
                            (click)="isCollapsed = true; isCollapsedImmo = true"
-                           href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/2021/grundstucksmarktdaten-2021-196961.html"
+                           href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/"
                            target="_blank"
                            rel="noopener noreferrer nofollow"
                            i18n>Landesgrundstücksmarktdaten</a>
@@ -327,7 +327,7 @@
                                i18n>Datenschutz</a>
                         </li>
                         <li class="my-1">
-                            <a href="https://www.gag.niedersachsen.de/startseite/grundstucksmarktberichte/nutzungsbedingungen/nutzungsbedingungen-fuer-bodenrichtwerte-88317.html"
+                            <a href="https://www.gag.niedersachsen.de/startseite/bodenrichtwerte/nutzungsbedingungen/nutzungsbedingungen-88317.html"
                                class="footer-link"
                                target="_blank"
                                rel="noopener noreferrer nofollow"
