Updated old gag links

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -260,7 +260,7 @@
             <div class="col-md-7"
                  [class.order-md-2]="getCardOrder('landesgrundstuecksmarktdaten')">
                 <a class="h2 display-4"
-                   href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/2021/grundstucksmarktdaten-2021-196961.html"
+                   href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/"
                    target="_blank"
                    rel="noopener noreferrer nofollow">
                     <span style="color: #343a40;"
@@ -278,7 +278,7 @@
             </div>
             <div class="col-md-5 d-flex justify-content-center align-self-center"
                  aria-hidden="true">
-                <a href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/2021/grundstucksmarktdaten-2021-196961.html"
+                <a href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/"
                    target="_blank"
                    rel="noopener noreferrer nofollow"
                    i18n-title
