added/fixed url params zoom, pitch

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -19,8 +19,8 @@
                                                      [(resetMapFired)]="resetMapFired"
                                                      [(currentZoom)]="currentZoom"
                                                      (currentZoomChange)="changeURL()"
-                                                     [(currentRotation)]="currentRotation"
-                                                     (currentRotationChange)="changeURL()"
+                                                     [(currentPitch)]="currentPitch"
+                                                     (currentPitchChange)="changeURL()"
                                                      [standardBaulandZoom]="standardBaulandZoom"
                                                      [standardLandZoom]="standardLandZoom">
                     </power-bodenrichtwert-navigation>
@@ -39,8 +39,8 @@
                                                [(resetMapFired)]="resetMapFired"
                                                [(currentZoom)]="currentZoom"
                                                (currentZoomChange)="changeURL()"
-                                               [(currentRotation)]="currentRotation"
-                                               (currentRotationChange)="changeURL()"
+                                               [(currentPitch)]="currentPitch"
+                                               (currentPitchChange)="changeURL()"
                                                [standardBaulandZoom]="standardBaulandZoom"
                                                [standardLandZoom]="standardLandZoom">
                     </power-bodenrichtwertkarte>
