--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -2,8 +2,8 @@
     <ng-container *ngIf="chartOption?.series.length != 0">
         <h3 i18n>Zeitliche Entwicklung</h3>
         <ng-container *ngIf="features?.features[0].properties.gema === 'Bremerhaven'; else bremen">
-            <p> Die Bodenrichtwerte in Bremerhaven werden in einem Zweijahreszyklus mit Stichtag 31.12. festgelegt.
-                Der letzte Stichtag war der {{ getBremerhavenStichtag() | date }}.
+            <p> Die Bodenrichtwerte in Bremerhaven werden in einem Zweijahreszyklus festgelegt.
+                Der letzte Stichtag war der {{ getStichtag('BREMERHAVEN') | date }}.
                 Die zeitliche Entwicklungsreihe berücksichtigt nur die Bodenrichtwerte, die zu diesem Stichtag
                 ermittelt werden.
                 Sie berücksichtigt keine unterjährigen konjunkturellen Entwicklungen.</p>
@@ -11,8 +11,8 @@
         <ng-template #bremen>
             <ng-container *ngIf="features?.features[0].properties.gabe === 'Gutachterausschuss für Grundstückswerte in Bremen';
                      else niedersachsen">
-                <p> Die Bremer Bodenrichtwerte werden in einem Zweijahreszyklus mit Stichtag 31.12. festgelegt.
-                    Der letzte Stichtag war der {{ getBremenStichtag() | date }}.
+                <p> Die Bremer Bodenrichtwerte werden in einem Zweijahreszyklus festgelegt.
+                    Der letzte Stichtag war der {{ getStichtag('BREMEN') | date }}.
                     Die zeitliche Entwicklungsreihe berücksichtigt nur die Bodenrichtwerte, die zu diesem Stichtag
                     ermittelt werden.
                     Sie berücksichtigt keine unterjährigen konjunkturellen Entwicklungen.</p>
@@ -20,7 +20,7 @@
         </ng-template>
         <ng-template #niedersachsen>
             <p i18n>Die zeitliche Entwicklungsreihe der niedersächsischen Bodenrichtwerte berücksichtigt nur die
-                Bodenrichtwerte, die zum Stichtag 31.12. des
+                Bodenrichtwerte, die zum Stichtag des
                 jeweiligen
                 Jahres ermittelt werden. Sie berücksichtigt keine unterjährigen konjunkturellen Entwicklungen.</p>
         </ng-template>
