--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -5,6 +5,7 @@
              (load)="loadMap($event)"
              (rotate)="onRotate()"
              (zoomEnd)="onZoomEnd()"
+             (pitchEnd)="onPitchEnd()"
              [bounds]="bounds"
              [maxZoom]="18"
              [minZoom]="5"
