--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -16,12 +16,16 @@
                              [address]="address">
             </power-geosearch>
         </div>
+        <!-- Further Functions desktop view -->
+        <div class="d-none d-md-inline-flex">
+            <ng-template [ngTemplateOutlet]="furtherFunctions"></ng-template>
+        </div>
 
         <!-- For mobile view -->
         <ng-template [ngTemplateOutlet]="geosearchMobileButton"></ng-template>
 
-        <!-- Further function button -->
-        <div class="btn-group"
+        <!-- Further function button for mobile view-->
+        <div class="btn-group d-md-none"
              role="group"
              (isOpenChange)="functionsActive = !functionsActive"
              dropdown>
@@ -50,78 +54,13 @@
             <div class="dropdown-menu dropdown-menu-right text-center"
                  *dropdownMenu
                  role="menu">
-                <button class="btn dropdown-item nav-link"
-                        type="button"
-                        role="menuitem"
-                        (click)="flurstueckssearch.modal.open(flurstueckssearch.title)"
-                        alt="Flurstückssuche"
-                        title="Flurstückssuche"
-                        i18n-alt
-                        i18n-title>
-                    <svg width="20px"
-                         height="20px"
-                         viewBox="0 0 16 16"
-                         class="bi bi-bounding-box-circles"
-                         fill="currentColor"
-                         xmlns="http://www.w3.org/2000/svg"
-                         focusable="false"
-                         aria-hidden="true">
-                        <path fill-rule="evenodd"
-                              d="M2 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM0 2a2 2 0 0 1 3.937-.5h8.126A2 2 0 1 1 14.5 3.937v8.126a2 2 0 1 1-2.437 2.437H3.937A2 2 0 1 1 1.5 12.063V3.937A2 2 0 0 1 0 2zm2.5 1.937v8.126c.703.18 1.256.734 1.437 1.437h8.126a2.004 2.004 0 0 1 1.437-1.437V3.937A2.004 2.004 0 0 1 12.063 2.5H3.937A2.004 2.004 0 0 1 2.5 3.937zM14 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM2 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm12 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
-                    </svg>
-                </button>
-                <button type="button"
-                        role="menuitem"
-                        class="btn dropdown-item nav-link"
-                        alt="Markierung fokussieren"
-                        title="Markierung fokussieren"
-                        (click)="onFocus()"
-                        [disabled]="!this.latLng?.length"
-                        i18n-alt
-                        i18n-title>
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         width="20px"
-                         height="20px"
-                         fill="currentColor"
-                         class="bi bi-zoom-in"
-                         viewBox="0 0 16 16"
-                         focusable="false"
-                         aria-hidden="true">
-                        <path fill-rule="evenodd"
-                              d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
-                        <path
-                              d="M10.344 11.742c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1 6.538 6.538 0 0 1-1.398 1.4z" />
-                        <path fill-rule="evenodd"
-                              d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5z" />
-                    </svg>
-                </button>
-                <button class="btn dropdown-item nav-link"
-                        type="button"
-                        role="menuitem"
-                        (click)="resetMap()"
-                        alt="Karte zurücksetzen"
-                        title="Karte zurücksetzen"
-                        aria-label="Karte und Adresseingabe zurücksetzen"
-                        i18n-alt
-                        i18n-title>
-                    <svg width="20px"
-                         height="20px"
-                         viewBox="0 0 16 16"
-                         class="bi bi-globe"
-                         fill="currentColor"
-                         xmlns="http://www.w3.org/2000/svg"
-                         focusable="false"
-                         aria-hidden="true">
-                        <path fill-rule="evenodd"
-                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm7.5-6.923c-.67.204-1.335.82-1.887 1.855A7.97 7.97 0 0 0 5.145 4H7.5V1.077zM4.09 4H2.255a7.025 7.025 0 0 1 3.072-2.472 6.7 6.7 0 0 0-.597.933c-.247.464-.462.98-.64 1.539zm-.582 3.5h-2.49c.062-.89.291-1.733.656-2.5H3.82a13.652 13.652 0 0 0-.312 2.5zM4.847 5H7.5v2.5H4.51A12.5 12.5 0 0 1 4.846 5zM8.5 5v2.5h2.99a12.495 12.495 0 0 0-.337-2.5H8.5zM4.51 8.5H7.5V11H4.847a12.5 12.5 0 0 1-.338-2.5zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5H8.5zM5.145 12H7.5v2.923c-.67-.204-1.335-.82-1.887-1.855A7.97 7.97 0 0 1 5.145 12zm.182 2.472a6.696 6.696 0 0 1-.597-.933A9.268 9.268 0 0 1 4.09 12H2.255a7.024 7.024 0 0 0 3.072 2.472zM3.82 11H1.674a6.958 6.958 0 0 1-.656-2.5h2.49c.03.877.138 1.718.312 2.5zm6.853 3.472A7.024 7.024 0 0 0 13.745 12H11.91a9.27 9.27 0 0 1-.64 1.539 6.688 6.688 0 0 1-.597.933zM8.5 12h2.355a7.967 7.967 0 0 1-.468 1.068c-.552 1.035-1.218 1.65-1.887 1.855V12zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.65 13.65 0 0 1-.312 2.5zm2.802-3.5h-2.49A13.65 13.65 0 0 0 12.18 5h2.146c.365.767.594 1.61.656 2.5zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7.024 7.024 0 0 0-3.072-2.472c.218.284.418.598.597.933zM10.855 4H8.5V1.077c.67.204 1.335.82 1.887 1.855.173.324.33.682.468 1.068z" />
-                    </svg>
-                </button>
+                <ng-template [ngTemplateOutlet]="furtherFunctions"></ng-template>
             </div>
         </div>
     </nav>
 </div>
 
-<!-- For mobile view -->
+<!-- For mobile view - search bar and stichtag, teilmarkt buttons-->
 <div [ngClass]="{'d-none' : !searchActive}"
      class="d-sm-none">
     <power-geosearch #geosearchComponent
@@ -274,6 +213,75 @@
             </svg>
         </button>
     </div>
+</ng-template>
+
+<ng-template #furtherFunctions>
+    <button class="btn dropdown-item nav-link"
+            type="button"
+            role="menuitem"
+            (click)="flurstueckssearch.modal.open(flurstueckssearch.title)"
+            alt="Flurstückssuche"
+            title="Flurstückssuche"
+            i18n-alt
+            i18n-title>
+        <svg width="20px"
+             height="20px"
+             viewBox="0 0 16 16"
+             class="bi bi-bounding-box-circles"
+             fill="currentColor"
+             xmlns="http://www.w3.org/2000/svg"
+             focusable="false"
+             aria-hidden="true">
+            <path fill-rule="evenodd"
+                  d="M2 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM0 2a2 2 0 0 1 3.937-.5h8.126A2 2 0 1 1 14.5 3.937v8.126a2 2 0 1 1-2.437 2.437H3.937A2 2 0 1 1 1.5 12.063V3.937A2 2 0 0 1 0 2zm2.5 1.937v8.126c.703.18 1.256.734 1.437 1.437h8.126a2.004 2.004 0 0 1 1.437-1.437V3.937A2.004 2.004 0 0 1 12.063 2.5H3.937A2.004 2.004 0 0 1 2.5 3.937zM14 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM2 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm12 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+        </svg>
+    </button>
+    <button type="button"
+            role="menuitem"
+            class="btn dropdown-item nav-link"
+            alt="Markierung fokussieren"
+            title="Markierung fokussieren"
+            (click)="onFocus()"
+            [disabled]="!this.latLng?.length"
+            i18n-alt
+            i18n-title>
+        <svg xmlns="http://www.w3.org/2000/svg"
+             width="20px"
+             height="20px"
+             fill="currentColor"
+             class="bi bi-zoom-in"
+             viewBox="0 0 16 16"
+             focusable="false"
+             aria-hidden="true">
+            <path fill-rule="evenodd"
+                  d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+            <path
+                  d="M10.344 11.742c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1 6.538 6.538 0 0 1-1.398 1.4z" />
+            <path fill-rule="evenodd"
+                  d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5z" />
+        </svg>
+    </button>
+    <button class="btn dropdown-item nav-link"
+            type="button"
+            role="menuitem"
+            (click)="resetMap()"
+            alt="Karte zurücksetzen"
+            title="Karte zurücksetzen"
+            aria-label="Karte und Adresseingabe zurücksetzen"
+            i18n-alt
+            i18n-title>
+        <svg width="20px"
+             height="20px"
+             viewBox="0 0 16 16"
+             class="bi bi-globe"
+             fill="currentColor"
+             xmlns="http://www.w3.org/2000/svg"
+             focusable="false"
+             aria-hidden="true">
+            <path fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm7.5-6.923c-.67.204-1.335.82-1.887 1.855A7.97 7.97 0 0 0 5.145 4H7.5V1.077zM4.09 4H2.255a7.025 7.025 0 0 1 3.072-2.472 6.7 6.7 0 0 0-.597.933c-.247.464-.462.98-.64 1.539zm-.582 3.5h-2.49c.062-.89.291-1.733.656-2.5H3.82a13.652 13.652 0 0 0-.312 2.5zM4.847 5H7.5v2.5H4.51A12.5 12.5 0 0 1 4.846 5zM8.5 5v2.5h2.99a12.495 12.495 0 0 0-.337-2.5H8.5zM4.51 8.5H7.5V11H4.847a12.5 12.5 0 0 1-.338-2.5zm3.99 0V11h2.653c.187-.765.306-1.608.338-2.5H8.5zM5.145 12H7.5v2.923c-.67-.204-1.335-.82-1.887-1.855A7.97 7.97 0 0 1 5.145 12zm.182 2.472a6.696 6.696 0 0 1-.597-.933A9.268 9.268 0 0 1 4.09 12H2.255a7.024 7.024 0 0 0 3.072 2.472zM3.82 11H1.674a6.958 6.958 0 0 1-.656-2.5h2.49c.03.877.138 1.718.312 2.5zm6.853 3.472A7.024 7.024 0 0 0 13.745 12H11.91a9.27 9.27 0 0 1-.64 1.539 6.688 6.688 0 0 1-.597.933zM8.5 12h2.355a7.967 7.967 0 0 1-.468 1.068c-.552 1.035-1.218 1.65-1.887 1.855V12zm3.68-1h2.146c.365-.767.594-1.61.656-2.5h-2.49a13.65 13.65 0 0 1-.312 2.5zm2.802-3.5h-2.49A13.65 13.65 0 0 0 12.18 5h2.146c.365.767.594 1.61.656 2.5zM11.27 2.461c.247.464.462.98.64 1.539h1.835a7.024 7.024 0 0 0-3.072-2.472c.218.284.418.598.597.933zM10.855 4H8.5V1.077c.67.204 1.335.82 1.887 1.855.173.324.33.682.468 1.068z" />
+        </svg>
+    </button>
 </ng-template>
 
 <power-flurstueck-search #flurstueckssearch
