improved boris-alt link, data before 2012

--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -111,9 +111,9 @@
                href="https://www.boris.niedersachsen.de/boris/bodenrichtwerte"
                target="_blank"
                rel="noopener noreferrer nofollow"
-               alt="Bodenrichtwerte vor 2012"
-               title="Bodenrichtwerte vor 2012"
-               i18n-title>&lt; 2012</a>
+               alt="Bodenrichtwerte vor 2012 in der Altanwendung"
+               title="Bodenrichtwerte vor 2012 in der Altanwendung"
+               i18n-title>vor 2012</a>
         </div>
     </div>
 </ng-template>
